--- a/.env
+++ b/.env
@@ -14,3 +14,5 @@ KINDE_POST_LOGIN_REDIRECT_URL=http://localhost:3000
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+8eworIhJgWdxWylO
