--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
+KINDE_CLIENT_ID=377bb2c2bc4e4f789473b09b4ccc8918
+KINDE_CLIENT_SECRET=p8cCPBlh7rolr72PigfgkuVrepRJUbAV4t31V5w6i76F3w9Q1iQu6
+KINDE_ISSUER_URL=https://camrent.kinde.com
 
+KINDE_SITE_URL=http://localhost:3000
+KINDE_POST_LOGOUT_REDIRECT_URL=http://localhost:3000
+KINDE_POST_LOGIN_REDIRECT_URL=http://localhost:3000/api/auth/creation
+
+
+DATABASE_URL="postgres://postgres.fxrdzaausqfovzxfdxtl:8eworIhJgWdxWylO@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
+DIRECT_URL="postgres://postgres.fxrdzaausqfovzxfdxtl:8eworIhJgWdxWylO@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres" 
